--- a/src/pages/CW.html
+++ b/src/pages/CW.html
@@ -82,7 +82,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer id="footer">
     <div class="contact-info">
         <h3>Контактна інформація</h3>
         <div class="contact-info-list"></div>
