--- a/src/pages/ContactFrom.html
+++ b/src/pages/ContactFrom.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/contact-form.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/style-burger.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -19,10 +20,10 @@
     </div>
 
     
-    <nav>
-        <a href="#services">Послуги</a>
-        <a href="#blogs">Блог</a>
-        <a href="#footer">Контакти</a>
+    <nav class="nav">
+        <a href="./MainPage.html#services">Послуги</a>
+        <a href="./MainPage.html#blogs">Блог</a>
+        <a href="./MainPage.html#footer">Контакти</a>
     </nav>
 
     
@@ -66,7 +67,7 @@
     </section>
   </main>
 
-  <footer id="footer">
+  <footer>
     <div class="contact-info">
         <h3>Контактна інформація</h3>
         <div class="contact-info-list"></div>
@@ -96,5 +97,6 @@
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="../js/smooth-scroll.js"></script>
+  <script src="../js/burger.js"></script>
 </body>
 </html>
