--- a/src/pages/CreateCW.html
+++ b/src/pages/CreateCW.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/style-burger.css">
   <link rel="stylesheet" href="../css/CreateCW.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +19,10 @@
     </div>
 
     
-    <nav>
-        <a href="#services">Послуги</a>
-        <a href="#blogs">Блог</a>
-        <a href="#footer">Контакти</a>
+    <nav class="nav">
+        <a href="./MainPage.html#services">Послуги</a>
+        <a href="./MainPage.html#blogs">Блог</a>
+        <a href="./MainPage.html#footer">Контакти</a>
     </nav>
 
     
@@ -32,7 +33,7 @@
     <div class="burger">
         <img src="../images/tabler.png" alt="Логотип сайту">
     </div>
-</header>
+  </header> 
 
   <main>
     <section class="resume-form-section">
@@ -95,7 +96,7 @@
     </section>
   </main>
 
-  <footer id="footer">
+  <footer>
     <div class="contact-info">
         <h3>Контактна інформація</h3>
         <div class="contact-info-list"></div>
@@ -125,5 +126,6 @@
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="../js/smooth-scroll.js"></script>
+  <script src="../js/burger.js"></script>
 </body>
 </html>
