--- a/src/pages/MainPage.html
+++ b/src/pages/MainPage.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style-burger.css">
     <link rel="stylesheet" href="../css/carousel.css">
     <link rel="stylesheet" href="../css/service-card.css">
     <link rel="stylesheet" href="../css/starter-page.css">
@@ -22,10 +23,20 @@
         </div>
 
         
-        <nav>
+        <nav class="nav">
+            <div class="house-lane">
+                <img src="../images/house.svg" class="house" alt="house">
+                <a href="./MainPage.html#body">Головна</a>
+            </div>
             <a href="#services">Послуги</a>
             <a href="#blogs">Блог</a>
             <a href="#footer">Контакти</a>
+            <div class="header-socials">  
+                <a href="#"><img src="../images/twitter.png" alt="Facebook"></a>
+                <a href="#"><img src="../images/facebook.png" alt="Instagram"></a>
+                <a href="#"><img src="../images/telegram.png" alt="Twitter"></a>
+                <a href="#"><img src="../images/instagram.png" alt="LinkedIn"></a>
+            </div>
         </nav>
 
         
@@ -34,7 +45,10 @@
         </div>
 
         <div class="burger">
-            <img src="../images/tabler.png" alt="Логотип сайту">
+            <img src="../images/tabler.png" alt="burger">
+        </div>
+        <div class="cross">
+            <img src="../images/cross.svg" alt="cross">
         </div>
     </header>
 
@@ -246,5 +260,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="../js/carousel.js"></script>
     <script src="../js/smooth-scroll.js"></script>
+    <script src="../js/burger.js"></script>
 </body>
 </html>
