--- a/src/pages/CreateCW.html
+++ b/src/pages/CreateCW.html
@@ -181,8 +181,8 @@
                 <img src="../images/Logo.png" alt="Логотип компанії" />
             </div>
         </footer>
-
-        <!-- Підключення вашого скрипта -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="../js/CW_data.js"></script>
+        <script src="../js/smooth-scroll.js"></script>
     </body>
 </html>
